# italian-anki

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  HTML_TO_MARKDOWN_CONVERSION.md  JSON2TOML.md  README.md  TOML_MIGRATION_COMPLETION.md  TOML_MIGRATION_SUMMARY.md  cliff.toml  coverage.xml  deck.schema.json  draft-issues-v4.md  fix_tags.py  format_files.sh  generate.py  html_to_markdown.py  json_to_toml.py  lint.py  mkdocs.yml  pyproject.toml  release-please-config.json  requirements.txt  setup.cfg  styles.css  test_validate.py  validate.py
.github/workflows/: ci.yml  deploy-docs.yml  git-cliff.yml  release-please.yml  release.yml  validate-and-test.yml  validate-commits.yml  validate-decks.yml
.junie/: guidelines.md
config/: cliff.toml
decks/: a1.json
decks/a1/: aggettivi.json  aggettivi.toml  aggettivi_nazionalita.json  aggettivi_nazionalita.toml  alfabeto.json  alfabeto.toml  antonomi.json  antonomi.toml  antonyms.json  articoli.json  articoli.toml  avverbi.json  avverbi.toml  colori.json  colori.toml  dimostrativi.json  dimostrativi.toml  espressioni_fare.json  fare.json  fare_expressions.json  frasi_prenotazione.json  frasi_prenotazione.toml  frasi_reclami.json  frasi_reclami.toml  idiomi.json  idioms.json  interrogativi.json  interrogativi.toml  markdown_test.toml  mesi_e_stagioni.json  mesi_e_stagioni.toml  modi_di_dire.json  numeri.json  numeri.toml  numeri_extended.json  numeri_extended.toml  orario.json  orario.toml  prepositions.json  preposizioni.json  (+26 more)
decks/a2/: aggettivi_avanzati.json  (+47 more)
docs/: index.md
output/: Italiano_A1.apkg
src/: fix_tags.py  format_with_black.py  generate.py  html_to_markdown.py  install_setuptools.py  lint.py  validate.py
tests/: basic_level_test_script.py  markdown_conversion_example.py  test_generate.py  test_levels.py  test_validate.py
(+34 files in other folders)
